--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - echo Pushing Docker image to ECR...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/lambda-vonage-api:latest
       - echo "Updating CloudFormation stack..."
-      - aws cloudformation update-stack --stack-name your-stack-name --template-body file://template.yml --capabilities CAPABILITY_IAM
+      - aws cloudformation update-stack --stack-name call-bot --template-body file://template.yml --capabilities CAPABILITY_IAM
 artifacts:
   files:
     - '**/*'
