--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,10 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_ACCOUNT_ID: "637423663433" # Cambia por tu cuenta de AWS
+    AWS_DEFAULT_REGION: "us-east-1" # Cambia por tu región
+
 phases:
   pre_build:
     commands:
@@ -16,3 +21,4 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/flask-api:latest
       - echo "Desplegando con AWS SAM..."
       - sam deploy --template-file template.yaml --stack-name flask-api --capabilities CAPABILITY_IAM
+
