--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,13 @@ env:
     AWS_ACCOUNT_ID: "637423663433" # Cambia por tu cuenta de AWS
     AWS_DEFAULT_REGION: "us-east-1" # Cambia por tu región
 
+version: 0.2
+
 phases:
   pre_build:
     commands:
       - echo "Autenticando con Amazon ECR..."
-      - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com)
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
       - echo "Construyendo la imagen Docker..."
