--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.2
-werkzeug==2.0.3
+Flask==2.0.3
+Werkzeug==2.0.3
 aws_lambda_wsgi==0.0.6
-vonage==4.0.0
-boto3
+boto3==1.26.162
+requests
